Wed Jan 23  9:48:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tds_sysdep_public.h.in:
	* src/ctlib/unittests/cancel.c src/dblib/unittests/timeout.c:
	* win32/tds_sysdep_public.h win32/winlogin.c win32/winsetup.c:
	- backport portability fixes for win64

Sun Jan 13 21:38:02 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: backported cancel error set

Sun Jan 13 21:36:56 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: add missing tests for heavy loads backport

Sat Jan 12  1:21:09 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: small fix for 64bit
	* src/tds/net.c: fix for heavy loads

Fri Jan 11 13:46:32 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/tsql.c: backport fix for MacOSX

Fri Jan 11 13:43:08 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: backport fix for Sybase

Fri Jan 11  9:32:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	* src/odbc/unittests/hidden.c:
	- merged changes for tests

Fri Jan 11  7:48:23 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: avoid clash

Thu Jan 10 15:55:32 EST 2008	JK Lowden <jklowden@freetds.org>
	* INSTALL.CVS NEWS README TODO ChangeLog-0.82
	* ChangeLog doc/userguide.sgml documentation updates

Thu Jan 10 17:04:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/cancel.c(added):
	- add test for SQLCancel

Thu Jan 10 16:28:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	- use temporary tables

Thu Jan 10 16:25:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>